# wip.rs

./: .envrc  .gitmodules  Cargo.toml  Justfile  README.md  consider-watchman  frontend.depends_on  justfile  old-build.rs  todo.md  wip.toml
frontend/: Cargo.toml  wip.toml
notes/: UX.md  indeterminate-tasklist.md  move-files-idea.md  old-git-stuff.md  old-next-step-git2.md  old-notes.md  roadmap.md  subset-trees.md
scripts/: detect.sh  original.sh  wip-commit.sh
src/: lib.rs
systemd/: wipd@.service
xtask/: Cargo.toml
xtask/src/: main.rs
