[package]
name = "wip"
version = "0.1.0"
edition = "2024"

[dependencies]
# both
toml = { version = "0.8.22", features = ["parse"] }
semver = { version = "1.0.26", features = ["serde"] }

# only for wip-amend-commit
execute = "0.2.13"
itertools = "0.14.0"

# only for wip-read-toml
walkdir = "2.5.0"

serde = "1.0.219"
serde_derive = "1.0.219"
