[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]

# this is currently ignored
[package.metadata.wip.paths]
include = "../common/types"
ignore = "README.md"

# also currently ignored
[package.metadata.wip.watcher-hooks]
trigger_rebuild = "echo $RANDOM > ./target/wip-trigger-rebuild"
binary_path = "./target/frontend"
